--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,24 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4'
+        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
-apply plugin: 'java'
-apply plugin: 'com.github.dcendents.android-maven'
-
-group = 'com.github.AleksanderMielczarek'
-
-def versionMajor = 0
-def versionMinor = 1
-def versionFix = 0
-
-targetCompatibility = '1.7'
-sourceCompatibility = '1.7'
-
-repositories {
-    mavenCentral()
+allprojects {
+    repositories {
+        jcenter()
+    }
 }
 
-dependencies {
-    compile 'org.androidannotations:androidannotations:4.0.0'
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
