--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,3 @@
+include ':app'
+include ':androidannotationspermissionsdispatcherplugin'
 rootProject.name = 'AndroidAnnotationsPermissionsDispatcherPlugin'
