Add sample code generation

--- a/androidannotationspermissionsdispatcherplugin/build.gradle
+++ b/androidannotationspermissionsdispatcherplugin/build.gradle
@@ -7,9 +7,9 @@ def versionMajor = 0
 def versionMinor = 1
 def versionFix = 0
 
-targetCompatibility = '1.7'
-sourceCompatibility = '1.7'
+targetCompatibility = '1.8'
+sourceCompatibility = '1.8'
 
 dependencies {
-    compile 'org.androidannotations:androidannotations:4.0.0'
+    compileOnly 'org.androidannotations:androidannotations:4.1.0'
 }
