--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,16 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion sdkVersion
+    buildToolsVersion buildToolsVersionVersion
 
     defaultConfig {
         applicationId "com.github.aleksandermielczarek.androidannotationspermissionsdispatcherpluginexample"
-        minSdkVersion 16
-        targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion minSdkVersionVersion
+        targetSdkVersion sdkVersion
+        versionCode versionMajor * 1000000 + versionMinor * 10000 + versionFix * 100
+        versionName "$versionMajor.$versionMinor.$versionFix"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -22,12 +23,20 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.github.hotchemi:permissionsdispatcher:2.1.3'
-    apt 'com.github.hotchemi:permissionsdispatcher-processor:2.1.3'
-    compile 'org.androidannotations:androidannotations-api:4.1.0'
-    apt 'org.androidannotations:androidannotations:4.1.0'
+
+    //test
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$espressoCoreVersion", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    testCompile "junit:junit:$junitVersion"
+
+    //support library
+    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+
+    compile "com.github.hotchemi:permissionsdispatcher:$permissionsdispatcherVersion"
+    apt "com.github.hotchemi:permissionsdispatcher-processor:$permissionsdispatcherVersion"
+    compile "org.androidannotations:androidannotations-api:$androidannotationsVersion"
+    apt "org.androidannotations:androidannotations:$androidannotationsVersion"
     apt project(':androidannotationspermissionsdispatcherplugin')
 }
 
