--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$toolsBuildGradleVersion"
-        classpath "com.neenbedankt.gradle.plugins:android-apt:$androidAptVersion"
         classpath "com.github.dcendents:android-maven-gradle-plugin:$androidMavenGradlePluginVersion"
         classpath "com.github.ben-manes:gradle-versions-plugin:$gradleVersionsPluginVersion"
         // NOTE: Do not place your application dependencies here; they belong
@@ -21,6 +20,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://maven.google.com" }
     }
 }
 
