--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_6
-        targetCompatibility JavaVersion.VERSION_1_6
-    }
 }
 
 dependencies {
@@ -41,4 +37,7 @@ dependencies {
     compile "org.androidannotations:androidannotations-api:$androidannotationsVersion"
     annotationProcessor "org.androidannotations:androidannotations:$androidannotationsVersion"
     annotationProcessor project(':androidannotationspermissionsdispatcherplugin')
+
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
+    compile "com.github.bumptech.glide:glide:$glideVersion"
 }
