--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://maven.google.com" }
+        maven { url "https://www.jitpack.io" }
     }
 }
 
