--- a/androidannotationspermissionsdispatcherplugin/build.gradle
+++ b/androidannotationspermissionsdispatcherplugin/build.gradle
@@ -9,3 +9,11 @@ sourceCompatibility = '1.8'
 dependencies {
     compileOnly "org.androidannotations:androidannotations:$androidannotationsVersion"
 }
+
+processResources {
+    filesMatching("**/*.properties") {
+        expand(
+                'version': "$versionMajor.$versionMinor.$versionFix"
+        )
+    }
+}
