--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,26 +22,24 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_6
         targetCompatibility JavaVersion.VERSION_1_6
     }
-    lintOptions {
-        abortOnError false
-    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
 
-    //test
+    compile ("com.github.hotchemi:permissionsdispatcher:$permissionsdispatcherVersion") {
+        exclude module: 'support-compat'
+        exclude module: 'support-v13'
+    }
+    annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:$permissionsdispatcherVersion"
+
+    compile "org.androidannotations:androidannotations-api:$androidannotationsVersion"
+    annotationProcessor "org.androidannotations:androidannotations:$androidannotationsVersion"
+
+    annotationProcessor project(':androidannotationspermissionsdispatcherplugin')
+
+    testCompile "junit:junit:$junitVersion"
     androidTestCompile("com.android.support.test.espresso:espresso-core:$espressoCoreVersion", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile "junit:junit:$junitVersion"
-
-    //support library
-    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
-
-    compile "com.github.hotchemi:permissionsdispatcher:$permissionsdispatcherVersion"
-    annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:$permissionsdispatcherVersion"
-    compile "org.androidannotations:androidannotations-api:$androidannotationsVersion"
-    annotationProcessor "org.androidannotations:androidannotations:$androidannotationsVersion"
-    annotationProcessor project(':androidannotationspermissionsdispatcherplugin')
 }
